--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "airclean",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
